settings for ora2

--- a/app/src/main/res/xml/preference_screen.xml
+++ b/app/src/main/res/xml/preference_screen.xml
@@ -80,7 +80,7 @@
           android:summary="@string/sensor_reverse_preference_summary"
           android:key="reverse_magnetic_z"/>
       <CheckBoxPreference
-          android:defaultValue="false"
+          android:defaultValue="true"
           android:title="@string/rotate_horizon_preference_title"
           android:summary="@string/rotate_horizon_preference_summary"
           android:key="rotate_horizon"/>
